--- a/actividades/noticiero/style.css
+++ b/actividades/noticiero/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Besley:ital,wght@0,400..900;1,400..900&display=swap');
+
 /** Reset */
 * {
   padding: 0;
@@ -27,12 +29,41 @@
   --color-content-focus-primary: var(--color-silver-tree-800);
 
   font-family: Inter, sans-serif;
+  font-family: "Besley", serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+  font-weight: 400;
   color: var(--color-content-primary);
 }
 
 body {
   background-color: var(--color-background-primary);
-  padding: calc(var(--size));
+  display: flex;
+  flex-direction: column;
+}
+
+header {
+  width: 100%;
+  background-image: linear-gradient(hsla(0, 0%, 10%, 0.80), hsla(0, 0%, 10%, 0.80)), url("https://images.unsplash.com/photo-1585829365295-ab7cd400c167?q=80&w=870&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+  background-size: cover;
+  background-position: center;
+
+  display: flex;
+  flex-direction: column;
+  gap: calc(var(--size) * 1);
+  justify-content: center;
+  padding: calc(var(--size) * 3) calc(var(--size) * 4);
+  color: var(--color-background-primary);
+}
+
+#header-title {
+  font-size: calc(var(--font-size) * 4);
+  font-weight: 500;
+}
+
+#header-subtitle {
+  font-size: calc(var(--font-size) * 1.5);
+  font-weight: 500;
 }
 
 h1 {
@@ -56,26 +87,136 @@ p {
 }
 
 nav {
+  font-family: Inter, sans-serif;
+  background-color: var(--color-content-primary);
+  padding: calc(var(--size) * 2) calc(var(--size) * 4);
+
   & ul {
     display: flex;
     flex-direction: row;
     list-style-type: none;
-    gap: calc(var(--size) * 0.5);
+    gap: calc(var(--size) * 3);
     padding: 0;
   }
 
   & a {
     text-decoration: none;
-    color: var(--color-content-primary);
+    font-size: calc(var(--font-size) * 1.25);
+
+    color: var(--color-silver-tree-200);
 
     &:hover {
-      color: var(--color-content-hover-primary);
+      color: var(--color-silver-tree-100);
     }
 
     &:focus {
-      color: var(--color-content-focus-primary);
+      color: var(--color-silver-tree-50);
     }
   }
+
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  gap: calc(var(--size) * 1.75)
+}
+
+
+main section {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: calc(var(--size) * 4);
+
+  padding: calc(var(--size) * 1.5);
+
+  /** 
+  * Header figure
+  * */
+  &>figure {
+    position: relative;
+    overflow: hidden;
+
+    & img {
+      height: 25vh;
+      object-fit: cover;
+      object-position: center;
+      position: relative;
+      z-index: 10;
+      filter: blur(5px);
+    }
+
+    &::after {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      display: block;
+      background-color: hsla(0, 0%, 0%, 0.5);
+      z-index: 20;
+    }
+
+
+    & figcaption {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+
+      transform: translate(-50%, -50%);
+
+      font-family: "Inter", sans-serif;
+      font-weight: 600;
+      font-size: calc(var(--font-size) * 3);
+      color: var(--color-silver-tree-50);
+      z-index: 30;
+    }
+  }
+
+  & article {
+    display: flex;
+    flex-direction: column;
+    gap: calc(var(--size) * 1.5);
+
+    /** 
+    * Article figure
+    * */
+    & figure {
+      & img {
+        height: 35vh;
+        object-position: center;
+        object-fit: cover;
+      }
+
+      & figcaption {
+        font-family: "Inter", sans-serif;
+        font-size: calc(var(--size) * 1)
+      }
+    }
+
+    & h2 {
+      font-size: calc(var(--size) * 1.5);
+    }
+
+    & p {
+      font-size: calc(var(--size) * 1);
+      line-height: calc(var(--size) * 1.5)
+    }
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  main section {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+
+    &>figure {
+      grid-column: span 3 / span 3;
+    }
+  }
+
 
 }
 
@@ -85,9 +226,5 @@ figure img {
   object-fit: cover;
 }
 
-main section {
-  width: 100%;
-
-}
 
 aside section {}
